package com.steveadoo.server.common;

option java_package = "com.fuzzjump.server.common.messages.join";

message JoinPacket {

  required int32 version = 1;
  optional string userId = 2;
  optional string sessionKey = 3;
  optional string serverSessionKey = 4;

}

message JoinServerPacket {

  required int32 version = 1;
  required string sessionKey = 2;
  required string machineName = 3;

}

message JoinResponsePacket {

  optional string serverIp = 1;
  optional int32 serverPort = 2;
  required int32 status = 3;
  optional string serverSessionKey = 4;
  required bool redirect = 5;

}